objects/fferpcore__BatchSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of background processes in Foundations.</description>
    <fields>
        <fullName>fferpcore__BillingDocumentCalculateTaxScopeSize__c</fullName>
        <description>Maximum number of documents to be processed in one go when calculating tax for billing documents.</description>
        <label>Billing Doc Calculate Tax Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaximumQueueSize__c</fullName>
        <label>Batch System Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeletionScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Message Deletion Batch Scope Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeliveryChunkingScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be chunked for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Chunking Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeliveryErrorDetectionScopeSize__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Overrides the automatic calculation of the number of messages processed when detecting errors in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Error Detection Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeliveryMaxLoopCount__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Message Delivery Max Loop Count</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeliveryPreparationScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be prepared for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Preparation Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__MessageDeliveryRoutingScopeSize__c</fullName>
        <defaultValue>null</defaultValue>
        <description>Overrides the automatic calculation of the number of messages to be routed for delivery in a batch. If blank, the number of messages is calculated based on the worst case scenario.</description>
        <label>Message Delivery Routing Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__NotificationRecipients__c</fullName>
        <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
        <label>Notification on objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__SequenceEventSplittingSize__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Specifies how many records may be sent in a single Sequence Request event.</description>
        <label>Sequence Event Splitting Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__SequenceGenerationScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Specifies how many records to be processed at a time, during sequence generation.</description>
        <label>Sequence Generation Scope Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__SequenceHandlerMaxRecords__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Specifies how many records the Sequence Event Handler may attempt to process at a time.</description>
        <label>Sequence Event Handler Maximum Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__SequenceHandlerMaxSObjectTypes__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Specifies how many different SObjectTypes the Sequence Event Handler may attempt to process at a time.</description>
        <label>Sequence Event Handler Max SObjectTypes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__UserInformationManageUserScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Maximum number of records to process in one go when creating, updating, deactivating and activating Salesforce users for pending user information records.</description>
        <label>Manage User Scope Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FDN Background Processing Settings</label>
</CustomObject>